# ai_accelerator_2020

LeNet_MNIST/: lenetmnist.py
mnist/: .gitignore  Cargo.toml  README.md  array.npy  biased.npy  hidden1.npy  hidden2.npy  loss.eps  plot.py  weight.npy
mnist/src/: abs_model.rs  dataset.rs  main.rs  mlp.rs
